# nerfmatch

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
configs/conda/: nerfmatch_env.yml  requirements.txt
configs/nerf/: nerf_7scenes_mip_sfm.yaml  nerf_cambridge_mip_app.yaml
configs/nerfmatch/: nerfmatch_7scenes_sfm_c2f.yaml  nerfmatch_7scenes_sfm_coarse.yaml  nerfmatch_cambridge_c2f.yaml  nerfmatch_cambridge_coarse.yaml
data/: download_data.sh  generate_cambridge_annotations.py
model_eval/: README.md  benchmark_nerfmatch.py  eval_nerf.py
model_train/: README.md  train_nerf.py  train_nerfmatch_c2f.py  train_nerfmatch_coarse.py
nerfmatch/: data_loaders.py  nerf_evaluator.py  nerf_trainer.py  nerfmatch_c2f_trainer.py  nerfmatch_coarse_trainer.py  nerfmatch_evaluator.py
nerfmatch/datasets/: __init__.py  data_loading.py  nerfbase.py  nerfmatch_dataset.py
nerfmatch/modules/: __init__.py  attention.py  extract_matches.py
nerfmatch/nerf/: embedding.py  render_utils.py  renderer.py  scene_utils.py
nerfmatch/nerf/models/: __init__.py  nerf.py
nerfmatch/utils/: __init__.py  config.py  geometry.py  images.py  metrics.py  optim.py
pretrained/: download_pretrained.sh
